<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment1_2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="59dp"
        android:gravity="center_horizontal|center_vertical"

        android:text="@string/btn1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <ImageView
        android:id="@+id/imageCafe2"
        android:layout_width="357dp"
        android:layout_height="216dp"
        android:layout_marginTop="28sp"
        android:scaleType="centerCrop"

        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:src="@drawable/image_cafe2" />

    <TextView
        android:id="@+id/textLogo_Cafe2"
        android:layout_width="263sp"
        android:layout_height="40sp"
        android:layout_marginTop="28sp"
        android:text="@string/logo_cafe2"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCafe2" />

    <TextView
        android:id="@+id/text_Cafe2"
        android:layout_width="368sp"
        android:layout_height="260sp"
        android:layout_marginTop="20sp"
        android:text="@string/cafe2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogo_Cafe2" />


</androidx.constraintlayout.widget.ConstraintLayout>