<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="59dp"
        android:gravity="center_horizontal|center_vertical"

        android:text="@string/btn1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <ImageView
        android:id="@+id/imageCafe1"
        android:layout_width="355dp"
        android:layout_height="136dp"
        android:layout_marginTop="28dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_cafe1"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_Cafe1"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/logo_cafe1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCafe1" />

    <ImageView
        android:id="@+id/imageCafe2"
        android:layout_width="355dp"
        android:layout_height="136dp"
        android:layout_marginTop="28dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_cafe2"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Cafe1"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_Cafe2"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/logo_cafe2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCafe2" />
</androidx.constraintlayout.widget.ConstraintLayout>